# meridian_commander

./: .gitignore  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml  publish.yml
docs/: DATA_TOOLS.md  index.html  style.css
martin_commander/: __init__.py  __main__.py  app.py  config.py  dialogs.py  editor.py  filesystems.py  operations.py  panel.py  plugin_api.py  sync.py  viewer.py
martin_commander/plugins/: __init__.py  json_push.py  run_remote_script.py  terminal.py
meridian_commander/: __init__.py  __main__.py  app.py  config.py  dialogs.py  filesystems.py  findfiles.py  operations.py  panel.py  plugin_api.py  util.py  viewer.py
meridian_commander/plugins/: __init__.py  _tabular.py  csv_build.py  csv_clean.py  csv_profile.py  find_files.py  json_push.py  run_remote_script.py  terminal.py
scripts/: merge.sh  split.sh
tests/: test_core.py
