[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "martin-commander"
version = "0.1.0"
description = "A two-pane terminal file manager (Midnight Commander style) with local + SFTP/FTP browsing, copy/move, directory sync, viewer and editor."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Martin Gallagher" }]
keywords = ["file-manager", "tui", "curses", "sftp", "ftp", "midnight-commander"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
# SFTP browsing is optional; the app runs fine without it (SFTP simply
# reports that paramiko is missing when you try to connect).
sftp = ["paramiko>=2.7"]
dev = ["paramiko>=2.7", "pytest>=7.0"]

[project.scripts]
martin-commander = "martin_commander.app:main"
mmc = "martin_commander.app:main"

[project.urls]
Homepage = "https://github.com/MartinGallagher-code/martin_commander"

[tool.setuptools]
packages = ["martin_commander"]
