[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meridian-commander"
version = "1.0.0"
description = "Two-pane terminal file manager (Midnight Commander style): local + SFTP/SSH/FTP panes, cross-location copy/move, bidirectional sync, in-pane terminal, viewer, editor and plug-ins."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Martin Gallagher" }]
keywords = [
    "file-manager", "tui", "curses", "terminal", "two-pane",
    "midnight-commander", "sftp", "ssh", "ftp", "sync",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: System :: Filesystems",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
# The core runs on the standard library alone (curses, ftplib, ...).
dependencies = []

[project.optional-dependencies]
# SFTP and SSH-shell browsing, the in-pane remote terminal, and the SSH
# plug-ins need paramiko; without it the app runs and reports what to install.
ssh = ["paramiko>=2.7"]
sftp = ["paramiko>=2.7"]        # kept as an alias of "ssh"
dev = ["paramiko>=2.7", "pytest>=7.0", "build", "twine"]

[project.scripts]
meridian-commander = "meridian_commander.app:main"
meridian = "meridian_commander.app:main"

[project.urls]
Homepage = "https://github.com/MartinGallagher-code/meridian_commander"
Repository = "https://github.com/MartinGallagher-code/meridian_commander"
Issues = "https://github.com/MartinGallagher-code/meridian_commander/issues"

[tool.setuptools]
packages = ["meridian_commander", "meridian_commander.plugins"]
